--- a/kanihi/src/main/res/values/strings.xml
+++ b/kanihi/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Kanihi</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="text_placeholder">Text Placeholder</string>
 
 </resources>
