--- a/kanihi/src/main/res/values/strings.xml
+++ b/kanihi/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="action_settings">Settings</string>
     <string name="text_placeholder">Text Placeholder</string>
 
+    <!--Menu Entries-->
+    <string name="show_up_next">Show Up Next</string>
+
     <!--Main Navigation Drawer Entries-->
     <string name="artists">Artists</string>
     <string name="albums">Albums</string>
